# wildfire_detection

./: .gitignore  CLAUDE.md  README.md  nasa_project.md  pyproject.toml  requirements.txt  wildfire_cordoba_project_plan.md
configs/: cordoba.yaml
dashboard/: README.md  next.config.mjs  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/components/: Dashboard.tsx  MapContainer.tsx  Sidebar.tsx
dashboard/src/components/charts/: ConfusionMatrix.tsx  FireTimeline.tsx  ShapBarChart.tsx  ZoneStatsPanel.tsx
dashboard/src/components/controls/: BasemapToggle.tsx  (+4 more)
dashboard/src/hooks/: useDataLoader.ts
dashboard/src/lib/: colorScales.ts  constants.ts  loadBinary.ts
dashboard/src/store/: useStore.ts
data/processed/: encoder_v2.pkl  scaler_v2.pkl  selected_features_v2.json
notebooks/: 02_eda.ipynb  03_preprocessing.ipynb  03a_resampling.ipynb  03b_preprocessing_v2.ipynb  04_modeling.ipynb  04_modeling_v2.ipynb  04b_tuning_v2.ipynb  04c_shap_v2.ipynb  04d_evaluation_v2.ipynb  04f_neural_network_colab.ipynb  04f_neural_network_colab_executed.ipynb  04f_neural_network_v2.ipynb  05a_prediction_grid.ipynb  05b_validation.ipynb  09_Estado_Actual_Wildfire_Project.ipynb  data_dictionary_wildfire.html  state_of_the_art.html
reusable_code/: GEE.py  SoilGrids.py  geospatial.py
scripts/: create_v2_notebooks.py  export_susceptibility_png.py  review_diagnostics.py
src/maps/: export_dashboard_data.py
tasks/: gap_analysis_nasa.md  lessons.md  re-sampling-todo.md  todo.md  validity_review_findings.md  validity_review_plan.md
(+13 files in other folders)
