[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wildfires-cordoba"
version = "0.1.0"
description = "Wildfire susceptibility mapping for Córdoba Province, Argentina"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "data*"]
